# oimalib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  type-checking.yaml
magneto/: __init__.py  alex.py  binary.py  classPure.py  complex_models.py  data_processing.py  fitting.py  fourier.py  mcfost.py  modelling.py  models.py  oifits.py  plotting.py  tools.py
magneto/fit/: dpfunc.py
magneto/internal_data/: gravity_example.fits
magneto/tests/: conftest.py  test_dataprocessing.py  test_mcfost.py
magneto/tests/data/: example_GRAVITY.oifits  example_GRAVITY_real.fits  example_MATISSE.oifits  example_MATISSE_real.oifits  example_merge_reference.fits  example_t1.fits  example_t2.fits  example_t3.fits
magneto/tests/data/example_grid/1_b10m2.51e-08ri55ro61t8000P9Tps10000/: OAR.2_b10m2.51e-08ri55ro61t8000P9Tps10000.23133153.stdout  m.txt
magneto/tests/data/example_grid/2_b10m2.51e-08ri55ro61t9000P9Tps10000/: m.oar
oimalib/: __init__.py  alex.py  classPure.py  complex_models.py  data_processing.py  fitting.py  modelling.py  models.py  oifits.py  pcs.py  plotting.py  tools.py
oimalib/fit/: dpfit.py  dpfunc.py
oimalib/internal_data/: colors.py  u-v_plan_CITau.fits
oimalib/tests/: test_dataprocessing.py  test_modelling.py  test_plot.py
oimalib/tests/data/example_grid/: log.txt
oimalib/tests/data/example_grid/1_b10m2.51e-08ri55ro61t8000P9Tps10000/: m.para  m.txt
oimalib/tests/data/example_grid/2_b10m2.51e-08ri55ro61t9000P9Tps10000/: OAR.3_b10m2.51e-08ri55ro61t9000P9Tps10000.23133162.stdout  m.txt
src/oimalib/: __init__.py  _cli.py  binary.py  classPure.py  complex_models.py  fitting.py  fourier.py  modelling.py  pcs.py  plotting.py  tools.py
src/oimalib/fit/: dpfit.py
tests/: test_cli.py  test_smoke.py
tests/data/: example_modelMag_chrom.fits  example_model_nochromatic.fits
tests/data/example_grid/1_b10m2.51e-08ri55ro61t8000P9Tps10000/: OAR.2_b10m2.51e-08ri55ro61t8000P9Tps10000.23133153.stdout  m.oar
tests/data/example_grid/2_b10m2.51e-08ri55ro61t9000P9Tps10000/: OAR.3_b10m2.51e-08ri55ro61t9000P9Tps10000.23133162.stderr  OAR.3_b10m2.51e-08ri55ro61t9000P9Tps10000.23133162.stdout  log.txt  m.para  m.txt
