[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oimalib"
version = "0.3"
description = "Optical Interferometry Modelling and Analysis Library"
authors = [{ name = "Anthony Soulain", email = "anthony.soulain@oca.eu" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.0.1",
    "astroquery>=0.4.4",
    "scipy>=1.7.2",
    "rich>=13.5.2",
    "corner>=2.2.1",
    "emcee>3.1.2",
    "matplotlib>=3.5.0",
    "numpy>=1.21.2",
    "pypdf>=3.2.0",
    "uncertainties>=3.1.6",
    "h5py>=3.14.0",
    "tqdm>=4.67.1",
    "termcolor>=3.1.0",
    "pandas>=2.3.3",
    "munch>=4.0.0",
    "seaborn>=0.13.2",
]

[project.scripts]
oimalib = "oimalib._cli:main"

[dependency-groups]
typecheck = ["mypy>=1.14.1", "types-termcolor>=1.1.6.2"]
test = ["pytest>=8", "pytest-cov", "coverage"]
lint = ["ruff>=0.6.0", "basedpyright>=1.19.0", "pre-commit"]
dev = [
    { include-group = "typecheck" },
    { include-group = "test" },
    { include-group = "lint" },
        "ipykernel",
]

[project.urls]
Homepage = "https://github.com/DrSoulain/oimalib"
Issues = "https://github.com/DrSoulain/oimalib/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP", "PGH", "RUF"]
lint.ignore = ["E501"]
fix = true
unsafe-fixes = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["oimalib"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingTypeStubs = "warning"
venvPath = "."
venv = ".venv"
exclude = ["tests/**"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
branch = true
source = ["oimalib"]

[tool.coverage.report]
omit = ["oimalib/tests/*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true

[tool.uv]
repositories.testpypi = "https://test.pypi.org/legacy/"
